<?xml version="1.0"?>
<package format="3">
  <name>franka_control</name>
  <version>0.0.1</version>
  <description>Franka Panda control node with MoveIt integration and custom service.</description>

  <maintainer email="raghavn753@gmail.com">Raghav N</maintainer>
  <license>MIT</license>

  <!-- build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime and build dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>franka_msgs</depend>

  <!-- for .srv generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
